fix: overflow

--- a/styles/partials/preloader/preloader.scss
+++ b/styles/partials/preloader/preloader.scss
@@ -5,7 +5,11 @@
   place-content: flex-end;
   transform-origin: 100%;
   background: $color-gray;
+  @include media("<phone") {
+    position: fixed
+  }
 }
+
 .preloader__number {
   @extend %text-stat;
   line-height: 102%;
@@ -13,10 +17,12 @@
   margin-left: auto;
   margin-right: 7.3rem;
   opacity: 0;
+
   @include media("<phone") {
     font-size: 20rem;
     margin-right: 0.75rem;
   }
+
   .char {
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
     //   position: relative;
@@ -40,10 +46,12 @@
     //   }
   }
 }
+
 .preloader__texts {
   margin-left: 7.3rem;
   position: relative;
   min-height: calc(14.3rem - 1.1404475rem);
+
   @include media("<phone") {
     margin-left: 1.7rem;
     min-height: 7.6rem;
@@ -51,21 +59,25 @@
 
   opacity: 0;
 }
+
 .preloader__text {
   top: 8.6rem;
   bottom: 3rem;
   @extend %text-l;
   position: absolute;
   line-height: 2.7rem;
+
   @include media("<phone") {
     font-size: 1.6rem;
     bottom: 1.634rem;
     top: 4.1rem;
   }
+
   .word {
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   }
 }
+
 .preloader__track {
   margin: 0 7.3rem 12.1rem;
   background: $color-white;
@@ -73,12 +85,14 @@
   height: 0.4rem;
   position: relative;
   border-radius: 2.5rem;
+
   @include media("<phone") {
     width: 33.6rem;
     margin: 0 1.7rem 5.9rem;
     height: 0.2rem;
   }
 }
+
 .preloader__bar {
   background: $color-black;
   width: 0%;
@@ -86,6 +100,7 @@
   height: 0.8rem;
   transform: translateY(-25%);
   border-radius: 2.5rem;
+
   @include media("<phone") {
     height: 0.4rem;
   }
